WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46616
[Qt] 32-bit Flash crashes on repeated SetWindow calls
https://bugs.webkit.org/show_bug.cgi?id=46616
Summary
[Qt] 32-bit Flash crashes on repeated SetWindow calls
Andreas Kling
Reported
2010-09-27 04:02:37 PDT
Re-enable PluginQuirkDontCallSetWindowMoreThanOnce for Qt on x86 Unix. We incorrectly thought this was fixed in Flash 10, but it turns out it was just never broken on 64-bit.
Attachments
Add attachment
proposed patch, testcase, etc.
Kenneth Rohde Christiansen
Comment 1
2010-09-27 04:06:30 PDT
rs=me!
Andreas Kling
Comment 2
2010-09-27 04:10:18 PDT
(In reply to
comment #1
)
> rs=me!
Dag nabbit, Kenneth, you are faster than speed itself! :O
Andreas Kling
Comment 3
2010-09-27 04:46:59 PDT
Landed in <
http://trac.webkit.org/changeset/68381
>
WebKit Review Bot
Comment 4
2010-09-27 06:15:33 PDT
http://trac.webkit.org/changeset/68381
might have broken Leopard Intel Release (Tests)
Ademar Reis
Comment 5
2010-10-21 14:16:10 PDT
I was about to cherry-pick the fix for
bug 47545
and notice this one should be cherry-picked as well. It's a low risk change and will add consistency to our behavior regarding the flash plugin.
Ademar Reis
Comment 6
2010-10-22 05:37:42 PDT
Revision
r68381
cherry-picked into qtwebkit-2.1 with commit 1994999 <
http://gitorious.org/webkit/qtwebkit/commit/1994999
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug