2010-09-27  Andreas Kling  <andreas.kling@nokia.com>

Rubber-stamped by Kenneth Rohde Christiansen.

        [Qt] 32-bit Flash crashes on repeated SetWindow calls
        https://bugs.webkit.org/show_bug.cgi?id=46616

        Re-enable PluginQuirkDontCallSetWindowMoreThanOnce for Qt on x86 Unix.

        We incorrectly thought this was fixed in Flash 10, but it turns out it
        was just never broken on 64-bit.

        * plugins/PluginPackage.cpp:
        (WebCore::PluginPackage::determineQuirks):


Canonical link: https://commits.webkit.org/59071@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68381 268f45cc-cd09-0410-ab3c-d52691b4dbfc